seaqt/QtNetwork/gen_qsslellipticcurve.h

class QSslEllipticCurve;
typedef struct QSslEllipticCurve QSslEllipticCurve;
QSslEllipticCurve* QSslEllipticCurve_new();
QSslEllipticCurve* QSslEllipticCurve_new2(QSslEllipticCurve* param1);
QSslEllipticCurve* QSslEllipticCurve_fromShortName(struct miqt_string name);
QSslEllipticCurve* QSslEllipticCurve_fromLongName(struct miqt_string name);
struct miqt_string QSslEllipticCurve_shortName(const QSslEllipticCurve* self);
struct miqt_string QSslEllipticCurve_longName(const QSslEllipticCurve* self);
bool QSslEllipticCurve_isValid(const QSslEllipticCurve* self);
bool QSslEllipticCurve_isTlsNamedCurve(const QSslEllipticCurve* self);